--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ elasticsearch_url=http://localhost:9200
 index_name=querydesk_documents
 frontend_url=http://localhost:3000
 embed_model=all-MiniLM-L6-v2
+insert_seed_data=true
