--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ fitz==0.0.1.dev2
 pydantic==2.11.7
 pydantic_settings==2.9.1
 python-dotenv==1.1.0
-python_docx==1.2.0
+python-docx==1.2.0
 Requests==2.32.4
 sentence_transformers==2.5.1
